--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -4,6 +4,14 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/types": "^7.9.0",
     "@catalogjs/file-daemon": "0.0.1",
     "@catalogjs/recipes": "0.0.1",
