handling bundle exports that are reexports from teh entrypoint json, resolver for-realzies first pass, misc updates

--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -33,10 +33,12 @@
     "@babel/traverse": "^7.9.5",
     "@types/babel__core": "^7.1.7",
     "@types/babel__traverse": "^7.0.10",
+    "charcodes": "^0.2.0",
     "esm": "^3.2.25",
     "fixturify-project": "^2.1.0",
     "qunit": "^2.9.3",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "unicode-13.0.0": "^0.8.0"
   },
   "volta": {
     "node": "14.2.0"
