--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@
 /packages/file-daemon-client/**/*.d.ts
 /packages/file-daemon-client/**/*.js
 /packages/file-daemon-client/**/*.js.map
-
+/packages/loader/**/*.d.ts
+/packages/loader/**/*.js
+/packages/loader/**/*.js.map
 /packages/builder-dom/**/*.d.ts
 /packages/builder-dom/**/*.js
 /packages/builder-dom/**/*.js.map
