--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/types": "^7.9.0",
     "@catalogjs/file-daemon": "0.0.1",
+    "@catalogjs/loader": "0.0.1",
     "@catalogjs/recipes": "0.0.1",
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
@@ -41,6 +42,9 @@
     "unicode-13.0.0": "^0.8.0"
   },
   "volta": {
-    "node": "14.2.0"
+    "node": "14.5.0"
+  },
+  "engines": {
+    "node": ">=14.5.0"
   }
 }
