--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/traverse": "^7.9.5",
+    "@catalogjs/loader": "0.0.1",
     "@catalogjs/shared": "0.0.1",
     "@msgpack/msgpack": "^1.12.2",
     "@types/babel__traverse": "^7.0.10",
