working through issue where we are polyfilling node modules using recipe and assorted bug fixes

--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -12,9 +12,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/types": "^7.9.0",
     "@catalogjs/file-daemon": "0.0.1",
     "@catalogjs/loader": "0.0.1",
+    "@catalogjs/polyfills": "0.0.1",
     "@catalogjs/recipes": "0.0.1",
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
