Allow the recipes URL to be configurable (the servie worker will be using the file daemon to serve the recipes for now), also setting volta node versions more widely as yarn could be run from many different packages, minor cleanup in node tests

--- a/packages/file-daemon-client/package.json
+++ b/packages/file-daemon-client/package.json
@@ -52,5 +52,8 @@
     "htmlparser2": "^4.1.0",
     "lodash": "^4.17.19",
     "moment": "^2.25.3"
+  },
+  "volta": {
+    "node": "14.5.0"
   }
 }
