--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -51,5 +51,8 @@
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "test": "qunit test/index.js"
+  },
+  "volta": {
+    "node": "14.5.0"
   }
 }
