--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@catalogjs/ui",
+  "name": "ui",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for ui goes here",
@@ -75,5 +75,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "volta": {
+    "node": "14.5.0"
   }
 }
