--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,7 +71,7 @@
     "typescript": "^3.9.3"
   },
   "engines": {
-    "node": "10.* || >= 12"
+    "node": ">= 14.5"
   },
   "ember": {
     "edition": "octane"
