GH actions, ugh

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,9 +71,12 @@
     "typescript": "^3.9.3"
   },
   "engines": {
-    "node": ">= 12"
+    "node": ">= 14.5"
   },
   "ember": {
     "edition": "octane"
+  },
+  "volta": {
+    "node": "14.5.0"
   }
 }
