--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -33,19 +33,23 @@
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-transform-typescript": "^7.9.4",
     "@babel/preset-env": "^7.9.0",
-    "@types/babel__core": "^7.1.7",
     "@babel/traverse": "^7.9.5",
     "@catalogjs/loader": "0.0.1",
     "@catalogjs/shared": "0.0.1",
     "@msgpack/msgpack": "^1.12.2",
+    "@types/babel__core": "^7.1.7",
     "@types/babel__traverse": "^7.0.10",
+    "@types/crypto-js": "^4.0.1",
+    "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.150",
     "@types/semver": "^7.3.1",
     "base64-arraybuffer": "^0.2.0",
     "bind-decorator": "^1.0.11",
     "columnify": "^1.5.4",
+    "crypto-js": "^4.0.0",
     "dom-serializer": "^0.2.2",
     "htmlparser2": "^4.1.0",
+    "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
     "semver": "^7.3.2"
