--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "bundle aurl",
     "columnify",
     "deduplicated",
+    "effecty",
     "fixturify",
+    "fleep",
     "fullname",
     "gensync",
     "jojo",
