--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,15 @@
     "columnify",
     "deduplicated",
     "effecty",
+    "eurl",
     "fixturify",
     "fleep",
     "fullname",
     "gensync",
+    "htmls",
     "jojo",
     "msgpack",
+    "pkg",
     "pkgs"
   ]
 }
