WIP: updated to more efficiently generate state hashes as well as to eliminate unnecessary work and state

--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -39,16 +39,17 @@
     "@msgpack/msgpack": "^1.12.2",
     "@types/babel__core": "^7.1.7",
     "@types/babel__traverse": "^7.0.10",
-    "@types/crypto-js": "^4.0.1",
+    "@types/imurmurhash": "^0.1.1",
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.150",
     "@types/semver": "^7.3.1",
     "base64-arraybuffer": "^0.2.0",
     "bind-decorator": "^1.0.11",
     "columnify": "^1.5.4",
-    "crypto-js": "^4.0.0",
     "dom-serializer": "^0.2.2",
+    "fast-stable-stringify": "^1.0.0",
     "htmlparser2": "^4.1.0",
+    "imurmurhash": "^0.1.4",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
