--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -39,6 +39,7 @@
     "@msgpack/msgpack": "^1.12.2",
     "@types/babel__core": "^7.1.7",
     "@types/babel__traverse": "^7.0.10",
+    "@types/diff": "^5.0.0",
     "@types/imurmurhash": "^0.1.1",
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.150",
@@ -46,6 +47,7 @@
     "base64-arraybuffer": "^0.2.0",
     "bind-decorator": "^1.0.11",
     "columnify": "^1.5.4",
+    "diff": "^5.0.0",
     "dom-serializer": "^0.2.2",
     "fast-stable-stringify": "^1.0.0",
     "htmlparser2": "^4.1.0",
