updated to be able to build with .json extension (for globals pkg)

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "build": "npm-run-all build:*",
     "build:file-daemon": "cd packages/file-daemon && tsc",
     "build:file-daemon-client": "cd packages/file-daemon-client && tsc",
-    "build:builder-worker": "cd packages/builder-worker && tsc",
+    "build:builder-worker": "cd packages/builder-worker && tsc --resolveJsonModule",
     "build:builder-dom": "cd packages/builder-dom && tsc",
-    "build:builder-node": "cd packages/builder-node && tsc",
+    "build:builder-node": "cd packages/builder-node && tsc --resolveJsonModule",
     "build:shared": "cd packages/shared && tsc",
     "build:loader": "cd packages/loader && tsc",
     "build:tarstream": "cd packages/tarstream && tsc",
