moving json resolve option into tsconfig.json

--- a/packages/builder-node/tsconfig.json
+++ b/packages/builder-node/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "module": "es6",
     "moduleResolution": "Node",
     "pretty": true,
