--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,8 @@ jobs:
       - name: install
         run: yarn install
 
+      - name: build
+        run: yarn build
+
       - name: test
         run: yarn acceptance-test
