--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "test:file-daemon-client": "cd packages/file-daemon-client && yarn test",
     "test:builder-worker": "cd packages/builder-worker && yarn test",
     "test:builder-node": "cd packages/builder-worker && yarn webpack && yarn qunit assets/node-test.js",
-    "acceptance-test": "yarn acceptance-test:init && yarn acceptance-test:bundle && yarn acceptance-test:default-assigner && yarn acceptance-test:maximum-assigner",
+    "acceptance-test": "yarn acceptance-test:init && yarn acceptance-test:bundle && yarn acceptance-test:default-assigner && yarn acceptance-test:reset-test && yarn acceptance-test:maximum-assigner",
     "acceptance-test:init": "rm -rf ./test-working && mkdir ./test-working",
     "acceptance-test:bundle": "cd ./test-working && node ../packages/builder-node/bin/install.js --project=.. @babel/core",
+    "acceptance-test:reset-test": "rm -rf ./test-working/dist",
     "acceptance-test:default-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://build-output --project=../packages/test-lib,http://localhost:4200/test-lib/ --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 7358",
     "acceptance-test:maximum-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://build-output --project=../packages/test-lib,http://localhost:4200/test-lib/ --assigner maximum --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 7358",
     "builder": "cd packages/builder-worker && yarn start",
