--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "test:file-daemon-client": "cd packages/file-daemon-client && yarn test",
     "test:builder-worker": "cd packages/builder-worker && yarn test",
     "test:builder-node": "cd packages/builder-worker && yarn webpack && yarn qunit assets/node-test.js",
-    "acceptance-test": "yarn acceptance-test:init && yarn acceptance-test:bundle && yarn acceptance-test:default-assigner && yarn acceptance-test:reset-test && yarn acceptance-test:maximum-assigner",
+    "acceptance-test": "npm-run-all acceptance-test:*",
     "acceptance-test:init": "rm -rf ./test-working && mkdir ./test-working",
     "acceptance-test:bundle": "cd ./test-working && node ../packages/builder-node/bin/install.js --project=.. @babel/core",
+    "acceptance-test:default-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://build-output --project=../packages/test-lib,http://localhost:4200/test-lib/ --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 7357",
     "acceptance-test:reset-test": "rm -rf ./test-working/dist",
-    "acceptance-test:default-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://build-output --project=../packages/test-lib,http://localhost:4200/test-lib/ --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 7358",
-    "acceptance-test:maximum-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://build-output --project=../packages/test-lib,http://localhost:4200/test-lib/ --assigner maximum --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 7358",
+    "acceptance-test:maximum-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://localhost:4200 --project=../packages/test-lib,http://localhost:4200/test-lib/ --outputOrigin http://localhost:4200 --assigner maximum --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 4200",
     "builder": "cd packages/builder-worker && yarn start",
     "serve": "cd packages/test-app && yarn start",
     "ui": "cd packages/ui && yarn start"
