--- a/package.json
+++ b/package.json
@@ -52,6 +52,13 @@
     "pkg:build-ui": "cd ./packages/ui && yarn build && cp -r ./dist ../../dist/ui",
     "pkg:build-service-worker": "cd ./packages/builder-worker && webpack && cp -r ./assets ../../dist/builder",
     "pkg:build-file-daemon": "cd ./packages/file-daemon && webpack && cp -r ./dist ../../dist/file-daemon",
+    "pkg:launch-script": "mkdir -p ./dist/bin && cp ./bin/catalogjs.sh ./dist/bin",
+    "pkg:tar": "cd ./dist && tar -cvzf catalogjs.tgz --exclude=catalogjs.tgz .",
+    "pub": "npm-run-all pub:*",
+    "pub:tarball": "aws s3 cp ./dist/catalogjs.tgz s3://catalogjs-install",
+    "pub:installer": "aws s3 cp ./bin/install.sh s3://catalogjs-install",
+    "pub:invalidate": "aws cloudfront create-invalidation --distribution-id E18L8UAZF919SH --paths \"/catalogjs.tgz\" \"/install.sh\" > /dev/null",
+    "release": "yarn pkg && yarn pub",
     "builder": "cd packages/builder-worker && yarn start",
     "serve": "cd packages/test-app && yarn start",
     "ui": "cd packages/ui && yarn start"
