--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "acceptance-test:maximum-assigner": "cd ./test-working && node ../packages/builder-node/bin/build.js --project=../packages/test-app,http://localhost:4200 --project=../packages/test-lib,http://localhost:4200/test-lib/ --outputOrigin http://localhost:4200 --assigner maximum --cdn ./working/cdn --overlay && testem ci -f ../testem.json -p 4200",
     "pkg": "npm-run-all pkg:*",
     "pkg:clean": "rm -rf ./dist && mkdir ./dist",
-    "pkg:build-ui": "cd ./packages/ui && yarn build && cp -r ./dist ../../dist/ui",
-    "pkg:build-service-worker": "cd ./packages/builder-worker && webpack && cp -r ./assets ../../dist/builder",
-    "pkg:build-file-daemon": "cd ./packages/file-daemon && webpack && cp -r ./dist ../../dist/file-daemon",
+    "pkg:ui": "cd ./packages/ui && yarn build && cp -r ./dist ../../dist/ui",
+    "pkg:service-worker": "cd ./packages/builder-worker && webpack && cp -r ./assets ../../dist/builder",
+    "pkg:file-daemon": "cd ./packages/file-daemon && webpack && cp -r ./dist ../../dist/file-daemon",
     "pkg:launcher": "mkdir -p ./dist/bin && cp ./bin/catalogjs ./dist/bin",
     "pkg:tar": "cd ./dist && tar -cvzf catalogjs.tgz --exclude=catalogjs.tgz .",
     "pub": "npm-run-all pub:*",
