--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -81,8 +81,11 @@
       "program": "${workspaceRoot}/packages/builder-node/bin/build.js",
       "console": "integratedTerminal",
       "args": [
-        "--project=packages/test-app,http://build-output",
+        "--project=packages/test-app,http://localhost:4200",
         "--project=packages/test-lib,http://localhost:4200/test-lib/",
+        "--outputOrigin=http://localhost:4200",
+        "--assigner=maximum",
+        "--pkgsPath=test-working/working/cdn/pkgs",
         "--overlay"
       ]
     },
