added our service worker launcher to the CDN

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "pub": "npm-run-all pub:*",
     "pub:tarball": "aws s3 cp ./dist/catalogjs.tgz s3://catalogjs-install",
     "pub:installer": "aws s3 cp ./bin/install.sh s3://catalogjs-install",
-    "pub:invalidate": "aws cloudfront create-invalidation --distribution-id E18L8UAZF919SH --paths \"/catalogjs.tgz\" \"/install.sh\" > /dev/null",
+    "pub:launcher": "aws s3 cp ./dist/builder/main.js s3://catalogjs-install",
+    "pub:invalidate": "aws cloudfront create-invalidation --distribution-id E18L8UAZF919SH --paths \"/catalogjs.tgz\" \"/install.sh\" \"/main.js\" > /dev/null",
     "publish-pkgs": "aws s3 cp ./working/cdn/pkgs s3://catalogjs-pkgs --recursive",
     "release": "yarn pkg && yarn pub",
     "builder": "cd packages/builder-worker && yarn start",
