--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -6,8 +6,10 @@
     "file-daemon": "./bin/file-daemon"
   },
   "dependencies": {
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@catalogjs/tarstream": "0.0.1",
+    "@types/babel__core": "^7.1.7",
     "@types/fs-extra": "^8.1.0",
     "@types/http-proxy": "^1.17.4",
     "@types/koa": "^2.11.3",
