--- a/packages/ember-app/package.json
+++ b/packages/ember-app/package.json
@@ -18,7 +18,7 @@
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
-    "start": "ember serve",
+    "start": "ember serve --port=4250",
     "start:catalogjs": "./start-catalogjs.sh",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test"
