--- a/packages/recipes/recipes/ember-cli-app-version.json
+++ b/packages/recipes/recipes/ember-cli-app-version.json
@@ -5,8 +5,7 @@
       "semverRange": "*",
       "babelConfigPath": "_babel_config_.js",
       "entrypoints": [
-        "./index.js",
-        "./resolvers/classic/container-debug-adapter.js"
+        "./initializer-factory.js"
       ]
     }
   ]
