--- a/packages/ember-app/package.json
+++ b/packages/ember-app/package.json
@@ -11,7 +11,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build --environment=production",
+    "build": "ember build",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
@@ -20,6 +20,7 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve --port=4250",
     "start:catalogjs": "./start-catalogjs.sh",
+    "start:catalogjs-local-pkgs": "./start-catalogjs-local-pkgs.sh",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test"
   },
