--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -40,6 +40,7 @@
     "@types/babel__core": "^7.1.7",
     "@types/babel__traverse": "^7.0.10",
     "@types/diff": "^5.0.0",
+    "@types/glob-to-regexp": "^0.4.0",
     "@types/imurmurhash": "^0.1.1",
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.150",
@@ -50,6 +51,7 @@
     "diff": "^5.0.0",
     "dom-serializer": "^0.2.2",
     "fast-stable-stringify": "^1.0.0",
+    "glob-to-regexp": "^0.4.1",
     "globals": "^13.5.0",
     "htmlparser2": "^4.1.0",
     "idb-keyval": "^5.0.2",
