--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -112,7 +112,7 @@
       "console": "integratedTerminal",
       "env": {},
       "program": "${workspaceRoot}/packages/builder-node/bin/install.js",
-      "args": ["--project=.", "@babel/runtime/helpers/esm/defineProperty"]
+      "args": ["--project=.", "@babel/core"]
     },
     {
       "type": "node",
