updating readme and scripts

--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "serve:test-app": "cd packages/test-app && yarn start",
     "serve:test-lib": "cd packages/test-lib && yarn start",
     "serve:ember-app": "yarn start-server-and-test serve:embroider 'http://localhost:4250/.stage2-output' serve:file-daemon-ember-app",
+    "serve:ember-app-local-pkgs": "yarn start-server-and-test serve:embroider 'http://localhost:4250/.stage2-output' serve:file-daemon-ember-app-local-pkgs",
     "serve:embroider": "cd packages/ember-app && yarn start",
-    "serve:file-daemon-ember-app": "cd packages/ember-app && yarn start:catalogjs-local-pkgs",
+    "serve:file-daemon-ember-app": "cd packages/ember-app && yarn start:catalogjs",
+    "serve:file-daemon-ember-app-local-pkgs": "cd packages/ember-app && yarn start:catalogjs-local-pkgs",
     "ui": "cd packages/ui && yarn start",
     "ember-acceptance-test": "npm-run-all ember-acceptance-test:*",
     "ember-acceptance-test:build": "cd packages/ember-app && yarn build",
