skipping TS checks in our libs

--- a/packages/builder-node/tsconfig.json
+++ b/packages/builder-node/tsconfig.json
@@ -18,6 +18,7 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "skipLibCheck": true
   }
 }
