--- a/packages/file-daemon/tsconfig.json
+++ b/packages/file-daemon/tsconfig.json
@@ -17,7 +17,8 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "skipLibCheck": true
   },
   "include": ["./**/*.ts"]
 }
