--- a/packages/file-daemon-client/tsconfig.json
+++ b/packages/file-daemon-client/tsconfig.json
@@ -18,6 +18,7 @@
     "strictPropertyInitialization": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
-    "lib": ["ES6", "ScriptHost", "WebWorker", "WebWorker.ImportScripts"]
+    "lib": ["ES6", "ScriptHost", "WebWorker", "WebWorker.ImportScripts"],
+    "skipLibCheck": true
   }
 }
