--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -12,6 +12,7 @@
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "lib": ["ES2020", "ScriptHost"]
+    "lib": ["ES2020", "ScriptHost"],
+    "skipLibCheck": true
   }
 }
